Adds dlopen test

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,15 @@ plugins {
 
 model {
     components {
-        cmem(NativeExecutableSpec)
+        cmem(NativeExecutableSpec) {
+            baseName = "test-cmem"
+        }
+        dlopen(NativeExecutableSpec) {
+            baseName = "test-dlopen"
+            binaries.all {
+                linker.args "-ldl"
+            }
+        }
     }
 }
 
