--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
-  id 'java-library'
+  id("java-library")
+  id("com.github.ben-manes.versions") version ("0.38.0")
 }
 
 repositories {
-  jcenter()
+  mavenCentral()
 }
 
 dependencies {
@@ -11,14 +12,14 @@ dependencies {
   api('org.apache.commons:commons-math3:3.6.1')
 
   // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-  implementation('com.google.guava:guava:29.0-jre')
+  implementation('com.google.guava:guava:30.1.1-jre')
 
-  implementation('net.bytebuddy:byte-buddy:1.10.13')
-  implementation('net.bytebuddy:byte-buddy-agent:1.10.13')
-  implementation('org.conscrypt:conscrypt-openjdk-uber:2.4.0')
+  implementation('net.bytebuddy:byte-buddy:1.11.0')
+  implementation('net.bytebuddy:byte-buddy-agent:1.11.0')
+  implementation('org.conscrypt:conscrypt-openjdk-uber:2.5.2')
 
-  testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
-  testImplementation('org.testcontainers:testcontainers:1.15.1')
+  testImplementation('org.junit.jupiter:junit-jupiter:5.7.2')
+  testImplementation('org.testcontainers:testcontainers:1.15.3')
 }
 
 tasks.withType(JavaCompile) {
