--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,8 @@ repositories {
 }
 
 dependencies {
-  // This dependency is exported to consumers, that is to say found on their compile classpath.
   api('org.apache.commons:commons-math3:3.6.1')
 
-  // This dependency is used internally, and not exposed to consumers on their own compile classpath.
   implementation('com.google.guava:guava:30.1.1-jre')
 
   implementation('net.bytebuddy:byte-buddy:1.11.0')
@@ -19,9 +17,19 @@ dependencies {
   implementation('org.conscrypt:conscrypt-openjdk-uber:2.5.2')
 
   testImplementation('org.junit.jupiter:junit-jupiter:5.7.2')
+  testImplementation('org.assertj:assertj-core:3.19.0')
   testImplementation('org.testcontainers:testcontainers:1.15.3')
 }
 
+test {
+    useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = "full"
+        events("skipped", "failed")
+    }
+}
+
 tasks.withType(JavaCompile) {
-  options.release.set(11)
+  options.release.set(16)
 }
