--- a/.editorconfig
+++ b/.editorconfig
@@ -56,22 +56,22 @@ ij_visual_guides = none
 ij_java_align_consecutive_assignments = false
 ij_java_align_consecutive_variable_declarations = false
 ij_java_align_group_field_declarations = false
-ij_java_align_multiline_annotation_parameters = false
-ij_java_align_multiline_array_initializer_expression = false
-ij_java_align_multiline_assignment = false
-ij_java_align_multiline_binary_operation = false
-ij_java_align_multiline_chained_methods = false
+ij_java_align_multiline_annotation_parameters = true
+ij_java_align_multiline_array_initializer_expression = true
+ij_java_align_multiline_assignment = true
+ij_java_align_multiline_binary_operation = true
+ij_java_align_multiline_chained_methods = true
 ij_java_align_multiline_extends_list = false
 ij_java_align_multiline_for = true
 ij_java_align_multiline_method_parentheses = false
 ij_java_align_multiline_parameters = true
-ij_java_align_multiline_parameters_in_calls = false
+ij_java_align_multiline_parameters_in_calls = true
 ij_java_align_multiline_parenthesized_expression = false
 ij_java_align_multiline_records = true
 ij_java_align_multiline_resources = true
-ij_java_align_multiline_ternary_operation = false
-ij_java_align_multiline_text_blocks = false
-ij_java_align_multiline_throws_list = false
+ij_java_align_multiline_ternary_operation = true
+ij_java_align_multiline_text_blocks = true
+ij_java_align_multiline_throws_list = true
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
 ij_java_annotation_parameter_wrap = off
@@ -107,7 +107,7 @@ ij_java_case_statement_on_separate_line = true
 ij_java_catch_on_new_line = false
 ij_java_class_annotation_wrap = split_into_lines
 ij_java_class_brace_style = end_of_line
-ij_java_class_count_to_use_import_on_demand = 5
+ij_java_class_count_to_use_import_on_demand = 99
 ij_java_class_names_in_javadoc = 1
 ij_java_do_not_indent_top_level_class_members = false
 ij_java_do_not_wrap_after_single_annotation = false
@@ -159,7 +159,7 @@ ij_java_keep_blank_lines_before_right_brace = 2
 ij_java_keep_blank_lines_between_package_declaration_and_header = 2
 ij_java_keep_blank_lines_in_code = 2
 ij_java_keep_blank_lines_in_declarations = 2
-ij_java_keep_builder_methods_indents = false
+ij_java_keep_builder_methods_indents = true
 ij_java_keep_control_statement_in_one_line = true
 ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
@@ -184,7 +184,7 @@ ij_java_method_parameters_new_line_after_left_paren = false
 ij_java_method_parameters_right_paren_on_new_line = false
 ij_java_method_parameters_wrap = off
 ij_java_modifier_list_wrap = false
-ij_java_names_count_to_use_import_on_demand = 3
+ij_java_names_count_to_use_import_on_demand = 99
 ij_java_new_line_after_lparen_in_record_header = false
 ij_java_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_java_parameter_annotation_wrap = off
@@ -300,7 +300,7 @@ ij_java_visibility = public
 ij_java_while_brace_force = never
 ij_java_while_on_new_line = false
 ij_java_wrap_comments = false
-ij_java_wrap_first_method_in_call_chain = false
+ij_java_wrap_first_method_in_call_chain = true
 ij_java_wrap_long_lines = false
 
 [*.less]
@@ -323,6 +323,44 @@ ij_less_space_after_colon = true
 ij_less_space_before_opening_brace = true
 ij_less_use_double_quotes = true
 ij_less_value_alignment = 0
+
+[*.proto]
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 4
+ij_visual_guides = none
+ij_protobuf_keep_blank_lines_in_code = 2
+ij_protobuf_keep_indents_on_empty_lines = false
+ij_protobuf_keep_line_breaks = true
+ij_protobuf_space_after_comma = true
+ij_protobuf_space_before_comma = false
+ij_protobuf_spaces_around_assignment_operators = true
+ij_protobuf_spaces_within_braces = false
+ij_protobuf_spaces_within_brackets = false
+
+[*.rs]
+max_line_length = 100
+ij_continuation_indent_size = 4
+ij_visual_guides = none
+ij_rust_align_multiline_chained_methods = false
+ij_rust_align_multiline_parameters = true
+ij_rust_align_multiline_parameters_in_calls = true
+ij_rust_align_ret_type = true
+ij_rust_align_type_params = false
+ij_rust_align_where_bounds = true
+ij_rust_align_where_clause = false
+ij_rust_allow_one_line_match = false
+ij_rust_block_comment_at_first_column = false
+ij_rust_indent_where_clause = true
+ij_rust_keep_blank_lines_in_code = 2
+ij_rust_keep_blank_lines_in_declarations = 2
+ij_rust_keep_indents_on_empty_lines = false
+ij_rust_keep_line_breaks = true
+ij_rust_line_comment_add_space = true
+ij_rust_line_comment_at_first_column = false
+ij_rust_min_number_of_blanks_between_items = 1
+ij_rust_preserve_punctuation = false
+ij_rust_spaces_around_assoc_type_binding = false
 
 [*.sass]
 indent_size = 2
@@ -403,7 +441,7 @@ ij_asciidoc_blank_lines_keep_after_header = 1
 ij_asciidoc_formatting_enabled = true
 ij_asciidoc_one_sentence_per_line = true
 
-[{*.ant,*.fxml,*.jfc,*.jhm,*.jnlp,*.jrxml,*.pom,*.qrc,*.rng,*.tld,*.wadl,*.wsdd,*.wsdl,*.xjb,*.xml,*.xsd,*.xsl,*.xslt,*.xul}]
+[{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.pom,*.rng,*.tld,*.wadl,*.wsdd,*.wsdl,*.xjb,*.xml,*.xsd,*.xsl,*.xslt,*.xul}]
 ij_visual_guides = none
 ij_xml_align_attributes = true
 ij_xml_align_text = false
@@ -768,104 +806,6 @@ ij_javascript_while_brace_force = never
 ij_javascript_while_on_new_line = false
 ij_javascript_wrap_comments = false
 
-[{*.cjsx,*.coffee}]
-indent_size = 2
-tab_width = 2
-ij_continuation_indent_size = 2
-ij_visual_guides = none
-ij_coffeescript_align_function_body = false
-ij_coffeescript_align_imports = false
-ij_coffeescript_align_multiline_array_initializer_expression = true
-ij_coffeescript_align_multiline_parameters = true
-ij_coffeescript_align_multiline_parameters_in_calls = false
-ij_coffeescript_align_object_properties = 0
-ij_coffeescript_align_union_types = false
-ij_coffeescript_align_var_statements = 0
-ij_coffeescript_array_initializer_new_line_after_left_brace = false
-ij_coffeescript_array_initializer_right_brace_on_new_line = false
-ij_coffeescript_array_initializer_wrap = normal
-ij_coffeescript_blacklist_imports = rxjs/Rx,node_modules/**,**/node_modules/**,@angular/material,@angular/material/typings/**
-ij_coffeescript_blank_lines_around_function = 1
-ij_coffeescript_call_parameters_new_line_after_left_paren = false
-ij_coffeescript_call_parameters_right_paren_on_new_line = false
-ij_coffeescript_call_parameters_wrap = normal
-ij_coffeescript_chained_call_dot_on_new_line = true
-ij_coffeescript_comma_on_new_line = false
-ij_coffeescript_enforce_trailing_comma = keep
-ij_coffeescript_field_prefix = _
-ij_coffeescript_file_name_style = relaxed
-ij_coffeescript_force_quote_style = false
-ij_coffeescript_force_semicolon_style = false
-ij_coffeescript_function_expression_brace_style = end_of_line
-ij_coffeescript_import_merge_members = global
-ij_coffeescript_import_prefer_absolute_path = global
-ij_coffeescript_import_sort_members = true
-ij_coffeescript_import_sort_module_name = false
-ij_coffeescript_import_use_node_resolution = true
-ij_coffeescript_imports_wrap = on_every_item
-ij_coffeescript_indent_chained_calls = true
-ij_coffeescript_indent_package_children = 0
-ij_coffeescript_jsx_attribute_value = braces
-ij_coffeescript_keep_blank_lines_in_code = 2
-ij_coffeescript_keep_first_column_comment = true
-ij_coffeescript_keep_indents_on_empty_lines = false
-ij_coffeescript_keep_line_breaks = true
-ij_coffeescript_keep_simple_methods_in_one_line = false
-ij_coffeescript_method_parameters_new_line_after_left_paren = false
-ij_coffeescript_method_parameters_right_paren_on_new_line = false
-ij_coffeescript_method_parameters_wrap = off
-ij_coffeescript_object_literal_wrap = on_every_item
-ij_coffeescript_prefer_as_type_cast = false
-ij_coffeescript_prefer_explicit_types_function_expression_returns = false
-ij_coffeescript_prefer_explicit_types_function_returns = false
-ij_coffeescript_prefer_explicit_types_vars_fields = false
-ij_coffeescript_reformat_c_style_comments = false
-ij_coffeescript_space_after_comma = true
-ij_coffeescript_space_after_dots_in_rest_parameter = false
-ij_coffeescript_space_after_generator_mult = true
-ij_coffeescript_space_after_property_colon = true
-ij_coffeescript_space_after_type_colon = true
-ij_coffeescript_space_after_unary_not = false
-ij_coffeescript_space_before_async_arrow_lparen = true
-ij_coffeescript_space_before_class_lbrace = true
-ij_coffeescript_space_before_comma = false
-ij_coffeescript_space_before_function_left_parenth = true
-ij_coffeescript_space_before_generator_mult = false
-ij_coffeescript_space_before_property_colon = false
-ij_coffeescript_space_before_type_colon = false
-ij_coffeescript_space_before_unary_not = false
-ij_coffeescript_spaces_around_additive_operators = true
-ij_coffeescript_spaces_around_arrow_function_operator = true
-ij_coffeescript_spaces_around_assignment_operators = true
-ij_coffeescript_spaces_around_bitwise_operators = true
-ij_coffeescript_spaces_around_equality_operators = true
-ij_coffeescript_spaces_around_logical_operators = true
-ij_coffeescript_spaces_around_multiplicative_operators = true
-ij_coffeescript_spaces_around_relational_operators = true
-ij_coffeescript_spaces_around_shift_operators = true
-ij_coffeescript_spaces_around_unary_operator = false
-ij_coffeescript_spaces_within_array_initializer_braces = false
-ij_coffeescript_spaces_within_array_initializer_brackets = false
-ij_coffeescript_spaces_within_imports = false
-ij_coffeescript_spaces_within_index_brackets = false
-ij_coffeescript_spaces_within_interpolation_expressions = false
-ij_coffeescript_spaces_within_method_call_parentheses = false
-ij_coffeescript_spaces_within_method_parentheses = false
-ij_coffeescript_spaces_within_object_braces = false
-ij_coffeescript_spaces_within_object_literal_braces = false
-ij_coffeescript_spaces_within_object_type_braces = true
-ij_coffeescript_spaces_within_range_brackets = false
-ij_coffeescript_spaces_within_type_assertion = false
-ij_coffeescript_spaces_within_union_types = true
-ij_coffeescript_union_types_wrap = on_every_item
-ij_coffeescript_use_chained_calls_group_indents = false
-ij_coffeescript_use_double_quotes = true
-ij_coffeescript_use_explicit_js_extension = global
-ij_coffeescript_use_path_mapping = always
-ij_coffeescript_use_public_modifier = false
-ij_coffeescript_use_semicolon_after_statement = false
-ij_coffeescript_var_declaration_wrap = normal
-
 [{*.ft,*.vm,*.vsl}]
 ij_visual_guides = none
 ij_vtl_keep_indents_on_empty_lines = false
@@ -873,19 +813,19 @@ ij_vtl_keep_indents_on_empty_lines = false
 [{*.gant,*.gradle,*.groovy,*.gson,*.gy}]
 ij_visual_guides = none
 ij_groovy_align_group_field_declarations = false
-ij_groovy_align_multiline_array_initializer_expression = false
-ij_groovy_align_multiline_assignment = false
+ij_groovy_align_multiline_array_initializer_expression = true
+ij_groovy_align_multiline_assignment = true
 ij_groovy_align_multiline_binary_operation = false
-ij_groovy_align_multiline_chained_methods = false
+ij_groovy_align_multiline_chained_methods = true
 ij_groovy_align_multiline_extends_list = false
 ij_groovy_align_multiline_for = true
 ij_groovy_align_multiline_list_or_map = true
 ij_groovy_align_multiline_method_parentheses = false
 ij_groovy_align_multiline_parameters = true
-ij_groovy_align_multiline_parameters_in_calls = false
+ij_groovy_align_multiline_parameters_in_calls = true
 ij_groovy_align_multiline_resources = true
-ij_groovy_align_multiline_ternary_operation = false
-ij_groovy_align_multiline_throws_list = false
+ij_groovy_align_multiline_ternary_operation = true
+ij_groovy_align_multiline_throws_list = true
 ij_groovy_align_named_args_in_map = true
 ij_groovy_align_throws_keyword = false
 ij_groovy_array_initializer_new_line_after_left_brace = false
@@ -1048,6 +988,7 @@ ij_groovy_use_single_class_imports = true
 ij_groovy_variable_annotation_wrap = off
 ij_groovy_while_brace_force = never
 ij_groovy_while_on_new_line = false
+ij_groovy_wrap_chain_calls_after_dot = false
 ij_groovy_wrap_long_lines = false
 
 [{*.gradle.kts,*.kt,*.kts,*.main.kts,*.space.kts}]
@@ -1146,23 +1087,6 @@ ij_json_spaces_within_braces = false
 ij_json_spaces_within_brackets = false
 ij_json_wrap_long_lines = false
 
-[{*.hcl,*.nomad}]
-indent_size = 2
-ij_visual_guides = none
-ij_hcl_array_wrapping = 2
-ij_hcl_keep_blank_lines_in_code = 2
-ij_hcl_keep_indents_on_empty_lines = false
-ij_hcl_keep_line_breaks = true
-ij_hcl_object_wrapping = 2
-ij_hcl_property_alignment = 0
-ij_hcl_property_line_commenter_character = 0
-ij_hcl_space_after_comma = true
-ij_hcl_space_before_comma = false
-ij_hcl_spaces_around_assignment_operators = true
-ij_hcl_spaces_within_braces = false
-ij_hcl_spaces_within_brackets = false
-ij_hcl_wrap_long_lines = false
-
 [{*.htm,*.html,*.sht,*.shtm,*.shtml}]
 ij_visual_guides = none
 ij_html_add_new_line_before_tags = body,div,p,form,h1,h2,h3
@@ -1190,7 +1114,6 @@ ij_html_space_after_tag_name = false
 ij_html_space_around_equality_in_attribute = false
 ij_html_space_inside_empty_tag = false
 ij_html_text_wrap = normal
-ij_html_uniform_ident = false
 
 [{*.jsf,*.jsp,*.jspf,*.tag,*.tagf,*.xjsp}]
 ij_visual_guides = none
@@ -1215,8 +1138,20 @@ ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 1
 ij_markdown_min_lines_between_paragraphs = 1
 
-[{*.mk,GNUmakefile,makefile}]
+[{*.pb,*.textproto}]
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 4
 ij_visual_guides = none
+ij_prototext_keep_blank_lines_in_code = 2
+ij_prototext_keep_indents_on_empty_lines = false
+ij_prototext_keep_line_breaks = true
+ij_prototext_space_after_colon = true
+ij_prototext_space_after_comma = true
+ij_prototext_space_before_colon = false
+ij_prototext_space_before_comma = false
+ij_prototext_spaces_within_braces = false
+ij_prototext_spaces_within_brackets = false
 
 [{*.properties,spring.handlers,spring.schemas}]
 ij_visual_guides = none
@@ -1225,90 +1160,7 @@ ij_properties_keep_blank_lines = false
 ij_properties_key_value_delimiter = equals
 ij_properties_spaces_around_key_value_delimiter = false
 
-[{*.py,*.pyw}]
-ij_visual_guides = none
-ij_python_align_collections_and_comprehensions = true
-ij_python_align_multiline_imports = true
-ij_python_align_multiline_parameters = true
-ij_python_align_multiline_parameters_in_calls = true
-ij_python_blank_line_at_file_end = true
-ij_python_blank_lines_after_imports = 1
-ij_python_blank_lines_after_local_imports = 0
-ij_python_blank_lines_around_class = 1
-ij_python_blank_lines_around_method = 1
-ij_python_blank_lines_around_top_level_classes_functions = 2
-ij_python_blank_lines_before_first_method = 0
-ij_python_dict_alignment = 0
-ij_python_dict_new_line_after_left_brace = false
-ij_python_dict_new_line_before_right_brace = false
-ij_python_dict_wrapping = 1
-ij_python_from_import_new_line_after_left_parenthesis = false
-ij_python_from_import_new_line_before_right_parenthesis = false
-ij_python_from_import_parentheses_force_if_multiline = false
-ij_python_from_import_trailing_comma_if_multiline = false
-ij_python_from_import_wrapping = 1
-ij_python_hang_closing_brackets = false
-ij_python_keep_blank_lines_in_code = 1
-ij_python_keep_blank_lines_in_declarations = 1
-ij_python_keep_indents_on_empty_lines = false
-ij_python_keep_line_breaks = true
-ij_python_new_line_after_colon = false
-ij_python_new_line_after_colon_multi_clause = true
-ij_python_optimize_imports_always_split_from_imports = false
-ij_python_optimize_imports_case_insensitive_order = false
-ij_python_optimize_imports_join_from_imports_with_same_source = false
-ij_python_optimize_imports_sort_by_type_first = true
-ij_python_optimize_imports_sort_imports = true
-ij_python_optimize_imports_sort_names_in_from_imports = false
-ij_python_space_after_comma = true
-ij_python_space_after_number_sign = true
-ij_python_space_after_py_colon = true
-ij_python_space_before_backslash = true
-ij_python_space_before_comma = false
-ij_python_space_before_for_semicolon = false
-ij_python_space_before_lbracket = false
-ij_python_space_before_method_call_parentheses = false
-ij_python_space_before_method_parentheses = false
-ij_python_space_before_number_sign = true
-ij_python_space_before_py_colon = false
-ij_python_space_within_empty_method_call_parentheses = false
-ij_python_space_within_empty_method_parentheses = false
-ij_python_spaces_around_additive_operators = true
-ij_python_spaces_around_assignment_operators = true
-ij_python_spaces_around_bitwise_operators = true
-ij_python_spaces_around_eq_in_keyword_argument = false
-ij_python_spaces_around_eq_in_named_parameter = false
-ij_python_spaces_around_equality_operators = true
-ij_python_spaces_around_multiplicative_operators = true
-ij_python_spaces_around_power_operator = true
-ij_python_spaces_around_relational_operators = true
-ij_python_spaces_around_shift_operators = true
-ij_python_spaces_within_braces = false
-ij_python_spaces_within_brackets = false
-ij_python_spaces_within_method_call_parentheses = false
-ij_python_spaces_within_method_parentheses = false
-ij_python_use_continuation_indent_for_arguments = false
-ij_python_use_continuation_indent_for_collection_and_comprehensions = false
-ij_python_wrap_long_lines = false
-
-[{*.tf,*.tfvars}]
-indent_size = 2
-ij_visual_guides = none
-ij_hcl-terraform_array_wrapping = 2
-ij_hcl-terraform_keep_blank_lines_in_code = 2
-ij_hcl-terraform_keep_indents_on_empty_lines = false
-ij_hcl-terraform_keep_line_breaks = true
-ij_hcl-terraform_object_wrapping = 2
-ij_hcl-terraform_property_alignment = 0
-ij_hcl-terraform_property_line_commenter_character = 0
-ij_hcl-terraform_space_after_comma = true
-ij_hcl-terraform_space_before_comma = false
-ij_hcl-terraform_spaces_around_assignment_operators = true
-ij_hcl-terraform_spaces_within_braces = false
-ij_hcl-terraform_spaces_within_brackets = false
-ij_hcl-terraform_wrap_long_lines = false
-
-[{*.toml,Cargo.lock,Gopkg.lock,Pipfile}]
+[{*.toml,Cargo.lock,Cargo.toml.orig,Gopkg.lock,Pipfile,poetry.lock}]
 ij_visual_guides = none
 ij_toml_keep_indents_on_empty_lines = false
 
