Dynamic foreign linking to isatty

--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,9 @@ tasks.register('runSparkline', JavaExec) {
   main = 'sandbox.Sparkline'
   classpath = sourceSets.main.runtimeClasspath
 }
+
+tasks.register('runIsATTY', JavaExec) {
+  dependsOn compileJava
+  main = 'sandbox.IsATTY'
+  classpath = sourceSets.main.runtimeClasspath
+}
