--- a/jdk11/build.gradle
+++ b/jdk11/build.gradle
@@ -1,17 +1,17 @@
 dependencies {
-  api('org.apache.commons:commons-math3:3.6.1')
+  api(libs.commons.math)
 
-  implementation('com.google.guava:guava:30.1.1-jre')
+  implementation(libs.guava)
 
-  implementation('net.bytebuddy:byte-buddy:1.11.15')
-  implementation('net.bytebuddy:byte-buddy-agent:1.11.15')
-  implementation('org.conscrypt:conscrypt-openjdk-uber:2.5.2')
+  implementation(libs.bundles.bytebuddy)
+  implementation(libs.bundles.okhttp)
+  implementation(libs.conscrypt)
 
   implementation(files("lib/spring-jdbc-4.1.6.RELEASE.jar"))
 
-  testImplementation('org.junit.jupiter:junit-jupiter:5.7.2')
-  testImplementation('org.assertj:assertj-core:3.20.2')
-  testImplementation('org.testcontainers:testcontainers:1.16.0')
+  testImplementation(libs.junit.jupiter)
+  testImplementation(libs.assertj)
+  testImplementation(libs.testcontainers)
 }
 
 
