chore: Adds swift subprojects

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,13 @@ plugins {
   id("com.github.ben-manes.versions") version ("0.39.0")
 }
 
-subprojects {
+
+ext {
+  // lookout for TYPESAFE_PROJECT_ACCESSORS feature preview
+  javaProjects = subprojects - project(":swift-app") - project(":swift-library")
+}
+
+configure(javaProjects) {
   apply(plugin: "java-library")
 
   repositories {
