--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,12 @@
 #
 
 org.gradle.java.installations.paths=/Users/brice/opensource/jdk/build/macosx-x86_64-server-release/images/jdk
+
+# https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.unsafe.configuration-cache=false
+
+
+# https://docs.gradle.org/current/userguide/multi_project_configuration_and_execution.html#sec:configuration_on_demand
+org.gradle.configureondemand=true
+
