--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 assertj = { module = "org.assertj:assertj-core", version = "3.20.2" }
 testcontainers = { module = "org.testcontainers:testcontainers", version = "1.16.0" }
 
+jna = { module = "net.java.dev.jna:jna", version = "5.9.0" }
 
 
 [bundles]
