--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@
 # SOFTWARE.
 #
 
+org.gradle.java.installations.auto-download=false
+#org.gradle.java.installations.fromEnv=JDK8,JRE14
 org.gradle.java.installations.paths=/Users/brice/opensource/jdk/build/macosx-x86_64-server-release/images/jdk
 
 # https://docs.gradle.org/current/userguide/configuration_cache.html
