--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ org.gradle.unsafe.configuration-cache=false
 org.gradle.configureondemand=true
 
 jextract=$HOME/openjdk-17-panama+3-167/bin/jextract
+
+libgraalLocation=$HOME/.asdf/installs/java/graalvm-22.1.0+java17/lib/
