--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@
 
 org.gradle.java.installations.auto-download=false
 #org.gradle.java.installations.fromEnv=JDK8,JRE14
-org.gradle.java.installations.paths=/Users/brice/opensource/jdk/build/macosx-x86_64-server-release/images/jdk
+org.gradle.java.installations.paths=/Users/brice.dutheil/opensource/jdk/build/macosx-x86_64-server-release/jdk
 
 # https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.unsafe.configuration-cache-problems=warn
