--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,13 +46,14 @@ flexmark-all = { module = "com.vladsch.flexmark:flexmark-all", version.ref = "fl
 graal-sdk = { module = "org.graalvm.sdk:graal-sdk", version.ref = "graalvm" }
 graal-js = { module = "org.graalvm.js:js", version.ref = "graalvm" }
 graal-js-scriptengine = { module = "org.graalvm.js:js-scriptengine", version.ref = "graalvm" }
-
+graal-js-chromeinspector = { module = "org.graalvm.tools:chromeinspector", version.ref="graalvm" }
 
 [bundles]
 okhttp = ['okhttp', 'okhttp-tls', 'okhttp-dnsoverhttps', 'okhttp-logging']
 bytebuddy = ['bytebuddy', 'bytebuddy-agent']
 flightRecorder = ['flightRecorder', 'flightRecorder-writer', 'flightRecorder-rules', 'flightRecorder-rules-jdk']
 
-graal-js = ["graal-js", "graal-js-scriptengine"]
+graal-js = ["graal-js", "graal-js-scriptengine", "graal-js-chromeinspector"]
 
 [plugins]
+download = { id = "de.undercouch.download", version = "5.3.0" }
