chore: Upgraded to Gradle 8.0 RC5

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@
 # file, You can obtain one at https://mozilla.org/MPL/2.0/.
 #
 
-org.gradle.java.installations.auto-download=false
+org.gradle.java.installations.auto-download=true
 #org.gradle.java.installations.fromEnv=JDK8,JRE14
 org.gradle.java.installations.paths=/Users/brice.dutheil/opensource/jdk/build/macosx-x86_64-server-release/jdk
 
