--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,9 @@ junit-jupiter =  "5.9.3"
 graalvm = "22.3.2"
 flexmark = "0.64.8"
 
+mockito = "5.3.1"
+mockito-kotlin = "5.0.0"
+
 flightRecorder = "8.3.1"
 
 jmh = "1.36"
@@ -34,8 +37,13 @@ bytebuddy = { group = "net.bytebuddy", name = "byte-buddy", version.ref = "byteb
 bytebuddy-agent = { group = "net.bytebuddy", name = "byte-buddy-agent", version.ref = "bytebuddy" }
 
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
+junit-jupiter-vintage-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
 assertj = { module = "org.assertj:assertj-core", version = "3.24.2" }
 testcontainers = { module = "org.testcontainers:testcontainers", version = "1.18.3" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 
 jna = { module = "net.java.dev.jna:jna", version = "5.13.0" }
 jnr-ffi = { module = "com.github.jnr:jnr-ffi", version = "2.2.13" }
@@ -63,6 +71,9 @@ gradleplugin-kotlin-jvm = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin"
 okhttp = ['okhttp', 'okhttp-tls', 'okhttp-dnsoverhttps', 'okhttp-logging']
 bytebuddy = ['bytebuddy', 'bytebuddy-agent']
 flightRecorder = ['flightRecorder', 'flightRecorder-writer', 'flightRecorder-rules', 'flightRecorder-rules-jdk']
+
+junit-jupiter = ["junit-jupiter-api", "junit-jupiter-engine", "junit-jupiter-vintage-engine"]
+mockito = ["mockito-core", "mockito-kotlin"]
 
 graal-js = ["graal-js", "graal-js-scriptengine", "graal-js-chromeinspector"]
 
