--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,3 +80,4 @@ graal-js = ["graal-js", "graal-js-scriptengine", "graal-js-chromeinspector"]
 [plugins]
 download = { id = "de.undercouch.download", version = "5.4.0" }
 jmh = { id = "me.champeau.jmh", version = "0.7.1" }
+ideaExt = { id = "org.jetbrains.gradle.plugin.idea-ext", version = "1.1.7" }
