--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,10 +36,9 @@ conscrypt = { module = "org.conscrypt:conscrypt-openjdk-uber", version = "2.5.2"
 bytebuddy = { group = "net.bytebuddy", name = "byte-buddy", version.ref = "bytebuddy" }
 bytebuddy-agent = { group = "net.bytebuddy", name = "byte-buddy-agent", version.ref = "bytebuddy" }
 
-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
-junit-jupiter-vintage-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
+junit-jupiter-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit-jupiter" }
 assertj = { module = "org.assertj:assertj-core", version = "3.24.2" }
 testcontainers = { module = "org.testcontainers:testcontainers", version = "1.19.1" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
