--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@
 #
 [versions]
 okhttp =  "4.12.0"
-bytebuddy = "1.14.9"
+bytebuddy = "1.14.10"
 junit-jupiter =  "5.10.1"
 graalvm = "23.1.1"
 flexmark = "0.64.8"
@@ -17,11 +17,13 @@ flexmark = "0.64.8"
 mockito = "5.7.0"
 mockito-kotlin = "5.1.0"
 
+testcontainers = "1.19.3"
+
 flightRecorder = "8.3.1"
 
 jmh = "1.37"
 
-kotlin = "1.9.20"
+kotlin = "1.9.21"
 kotlinCoroutines = "1.5.0"
 
 [libraries]
@@ -40,7 +42,7 @@ junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.re
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter" }
 junit-jupiter-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit-jupiter" }
 assertj = { module = "org.assertj:assertj-core", version = "3.24.2" }
-testcontainers = { module = "org.testcontainers:testcontainers", version = "1.19.1" }
+testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 
