--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -88,3 +88,4 @@ graal-deps = ["graal-sdk", "graal-truffle-api"]
 download = { id = "de.undercouch.download", version = "5.6.0" }
 jmh = { id = "me.champeau.jmh", version = "0.7.2" }
 ideaExt = { id = "org.jetbrains.gradle.plugin.idea-ext", version = "1.1.8" }
+testLogger = { id = "com.adarshr.test-logger", version = "4.0.0" }
